Fixed search result alignments

--- a/recipe.css
+++ b/recipe.css
@@ -33,8 +33,9 @@ label, h4 {
 }
 
 a {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.4rem;
   text-decoration: none;
-  display: flex;
   text-align: center;
   color: #333;
 }
@@ -54,9 +55,10 @@ a {
 
 #searchResults {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   box-sizing: inherit;
-  margin-right: -15px;
 }
 
 .col {
@@ -64,7 +66,8 @@ a {
   margin-bottom: 16px;
   width: 200px;
   /* height: 250px; */
-  margin-right: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .col-2 {
